K8SPXC-1365 - pxc-operator - Fix watchNamespace

--- a/charts/pxc-operator/values.yaml
+++ b/charts/pxc-operator/values.yaml
@@ -10,7 +10,10 @@ image: ""
 
 # set if you want to specify a namespace to watch
 # defaults to `.Release.namespace` if left blank
+# multiple namespaces can be specified and separated by comma
 # watchNamespace:
+# set if you want that watched namespaces are created by helm
+# createNamespace: false
 
 # set if operator should be deployed in cluster wide mode. defaults to false
 watchAllNamespaces: false
